app1/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyhouse-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyhouse-client
  template:
    metadata:
      labels:
        app: tinyhouse-client
    spec:
      containers:
        - name: tinyhouse-client
          image: webmakaka/tinyhouse-client-app1
