app1/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyhouse-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyhouse-server
  template:
    metadata:
      labels:
        app: tinyhouse-server
    spec:
      containers:
        - name: tinyhouse-server
          image: webmakaka/tinyhouse-server-app1
