app1/k8s/mongo-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyhouse-mongo-svc
spec:
  selector:
    app: tinyhouse-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
