app1/k8s/server-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyhouse-server-svc
spec:
  selector:
    app: tinyhouse-server
  ports:
    - name: tinyhouse-server
      protocol: TCP
      port: 3000
      targetPort: 3000
